[package]
name = "pi_svg"
version = "0.1.0"
authors = ["moyy <dev@dev.com>"]
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
gl = "0.14"
usvg = "0.23"

pi_hash = "0.1"

pathfinder_color = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_geometry = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_gl = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_gpu = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_renderer = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_resources = { git = "https://github.com/GaiaWorld/pathfinder.git"}
pathfinder_svg = { git = "https://github.com/GaiaWorld/pathfinder.git"}

[dev-dependencies]
glutin = "0.29"
env_logger = "0.9"
gl_old = {package = "gl", version = "0.6"}

[build-dependencies]
walkdir = "2.3"