[package]
name = "pi_svg"
version = "0.1.0"
authors = ["moyy <dev@dev.com>"]
edition = "2021"

# 默认 禁用 simd
[features]
default = ["pf-no-simd"]
pf-no-simd = ["pathfinder_simd/pf-no-simd"]

[dependencies]
log = "0.4"
thiserror = "1.0"
gl = "0.14"
usvg = "0.23"

pi_hash = "0.1"

pathfinder_color = "0.5"
pathfinder_geometry = "0.5"
pathfinder_gl = "0.5"
pathfinder_gpu = "0.5"
pathfinder_renderer = "0.5"
pathfinder_resources = "0.5"
pathfinder_svg = { git = "https://github.com/GaiaWorld/pathfinder_svg.git" }
pathfinder_simd = "0.5"

[dev-dependencies]
glutin = "0.29"
env_logger = "0.9"
gl_old = {package = "gl", version = "0.6"}

[build-dependencies]
walkdir = "2.3"